--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "S. Hans",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^5.1.0",
     "multer": "^2.0.2",
     "nodemon": "^3.1.10",
